--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-helmet-async": "^2.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
