--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@vercel/analytics": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet-async": "^2.0.5"
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.26.2",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
