--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "eslint": "^9.11.1",
+    "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
-    "vite": "^2.8.0"
+    "@vitejs/plugin-react": "^1.3.2",
+    "vite": "^2.9.18"
   }
 }
