--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "ytb",
+  "name": "random-youtube-player",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/node": "^22.7.5",
     "@vercel/analytics": "^1.3.1",
     "eslint": "^9.11.1",
     "prettier": "^3.3.3",
@@ -22,7 +24,10 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.3.2",
-    "vite": "^2.9.18"
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^1.0.7",
+    "typescript": "^4.5.4",
+    "vite": "^2.8.0"
   }
 }
